Actual quantity doesn't editable more

--- a/client/lib/components/sales_prediction/sales-row/sales-cell/view.html
+++ b/client/lib/components/sales_prediction/sales-row/sales-cell/view.html
@@ -1,8 +1,4 @@
 <template name="predictionSalesCell">
     <td>{{state$predictionQuantity}}</td>
-    <td>
-        <a href="#" class="actual-qty">
-            {{state$actualQuantity}}
-        </a>
-    </td>
+    <td>{{state$actualQuantity}}</td>
 </template>
