--- a/client/lib/components/roles/add_role/permission_checklist/view.html
+++ b/client/lib/components/roles/add_role/permission_checklist/view.html
@@ -1,10 +1,10 @@
 <template name="permissionsChecklist">
-  {{#each state$permissions}}
+  {{#each state$actions}}
     <div class="col-xs-3 col-sm-4 col-md-4 col-lg-3">
       <div class="checkbox">
         <input type="checkbox" name="permissions" value="{{value}}" id="perm-{{value}}" />
         <label for="perm-{{value}}">
-          {{text}} <span class="text-muted">{{details}}</span>
+          {{text}}
         </label>
       </div>
     </div>
