--- a/client/lib/components/roles/roles_list/role_item/permissions_list/view.html
+++ b/client/lib/components/roles/roles_list/role_item/permissions_list/view.html
@@ -1,11 +1,13 @@
 <template name="permissionsList">
   {{# unless state$role.default}}
-    <a href="#" id="{{state$role._id}}-editable" data-id="{{state$role._id}}">edit permissions</a>
+    <a href="#" id="{{state$role._id}}-editable">edit permissions</a>
   {{/ unless}}
 
   <ul style="padding-left: 16px;">
-    {{#each state$role.permissions}}
-      {{>render component="permissionItem" permission=this}}
+    {{#each state$role.actions}}
+      <li>
+        {{this}}
+      </li>
     {{/each}}
   </ul>
 </template>
