Button for loading menu items

--- a/client/lib/components/sales_prediction/view.html
+++ b/client/lib/components/sales_prediction/view.html
@@ -38,4 +38,9 @@
       </div>
     </div>
   </div>
+  <div>
+    <button id="loadMoreBtn" class="btn btn-white center-block" type="button">
+      Load more
+    </button>
+  </div>
 </template>
