--- a/client/lib/components/navigations/navigation/view.html
+++ b/client/lib/components/navigations/navigation/view.html
@@ -20,7 +20,7 @@
             {{#if getCurrentAreaId}}
               {{#if canViewForecast}}
                 <li class="{{isActiveRoute regex='salesPrediction'}}">
-                  <a href="{{pathFor "salesPrediction" year=year week=week}}">
+                  <a href="{{pathFor "salesPrediction" year=year week=week category="all"}}">
                     <i class="fa fa-bar-chart"></i>
                     <span class="nav-label">Forecast</span>
                   </a>
