--- a/client/lib/components/sales_prediction/filterByCategory/view.html
+++ b/client/lib/components/sales_prediction/filterByCategory/view.html
@@ -1,5 +1,4 @@
 <template name="FilterByCategory">
-  HERE WILL BE FILTER
   <div class="row m-b">
     <div class="col-xs-3">
       <button data-toggle="dropdown" class="btn btn-white dropdown-toggle form-control text-capitalize"
@@ -7,7 +6,7 @@
         {{state$currentCategory}}
       </button>
       <span class="caret caret-pulled-right pull-right"></span>
-      <ul class="dropdown-menu text-capitalize">
+      <ul class="dropdown-menu text-capitalize filter-menus">
         {{#each state$categories}}
           <li>
             <a href="/roster/prediction/{{state$year}}/{{state$week}}/{{this._id}}" class="">{{this.name}}</a>
