added dynamic search by menu items in forecast

--- a/client/lib/components/sales_prediction/sales-row/view.html
+++ b/client/lib/components/sales_prediction/sales-row/view.html
@@ -1,6 +1,6 @@
 <template name="predictionSalesRow">
   <tr>
-    <td>{{state$menuItem.name}}</td>
+    <td>{{{state$menuItem.name}}}</td>
     {{#each state$weekPrediction}}
       {{> render component="predictionSalesCell" displayItem=this itemId =state$menuItem._id }}
     {{/each}}
