--- a/client/lib/components/sales_prediction/view.html
+++ b/client/lib/components/sales_prediction/view.html
@@ -30,7 +30,7 @@
           </thead>
           <tbody>
           {{>render component="totalSalesRow"}}
-          {{#each state$menuItems}}
+          {{#each getMenuItems}}
             {{> render component="predictionSalesRow" currentWeekDate=state$currentWeekDate menuItem=this}}
           {{/each}}
           </tbody>
