--- a/client/stylesheets/12_index.less
+++ b/client/stylesheets/12_index.less
@@ -420,3 +420,12 @@ span {
   padding: 5px 6px;
   cursor: pointer;
 }
+
+.logo-element {
+  padding: 0 !important;
+}
+
+.nav-header {
+  padding: 15px !important;
+  font-size: 18px;
+}
