--- a/client/stylesheets/globals/navigation.import.less
+++ b/client/stylesheets/globals/navigation.import.less
@@ -281,15 +281,11 @@ body.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
   left: 65px
 }
 
-.navbar-default .special_link a {
+.navbar-default .special_link {
   background: @navy;
   color: white;
 }
-.navbar-default .special_link a:hover {
-  background: #17987e !important;
-  color: white;
-}
-.navbar-default .special_link a span.label{
+.navbar-default .special_link span.label{
   background: #fff;
   color: @navy;
 }
