Improve roster components file tree structure

--- a/client/lib/components/roster/daily-roster/daily-shift-scheduling/view.html
+++ b/client/lib/components/roster/daily-roster/daily-shift-scheduling/view.html
@@ -26,7 +26,8 @@
 
   {{#if canEditRoster}}
     <!-- SUBMIT JOB -->
-    <div class="modal fade" id="submitJobModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="submitJobModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+         aria-hidden="true">
       {{> render component='submitJob'}}
     </div>
     <!-- /SUBMIT JOB -->
