--- a/client/lib/components/archiving/location_item/view.html
+++ b/client/lib/components/archiving/location_item/view.html
@@ -1,11 +1,9 @@
 <template name="locationItem">
   {{#with state$getLocation}}
-    <div class="panel-heading" role="tab" id="heading-{{_id}}">
+    <div class="panel-heading" role="button" id="heading-{{_id}}" data-toggle="collapse" data-parent="#accordion"
+         href="#body-{{_id}}" aria-expanded="false" aria-controls="body-{{_id}}">
       <h4 class="panel-title">
-        <a role="button" data-toggle="collapse" data-parent="#accordion" href="#body-{{_id}}"
-           aria-expanded="false" aria-controls="body-{{_id}}">
-          {{name}}
-        </a>
+        {{name}}
         <button class="btn btn-xs {{settings.btn_class}} pull-right archive-loc-btn">{{settings.btn_text}}</button>
       </h4>
     </div>
