--- a/client/views/main_views/roster/template/view.html
+++ b/client/views/main_views/roster/template/view.html
@@ -3,6 +3,6 @@
   {{> render component="pageHeading" title="Template Weekly Roster" category='Roster' name="weeklyrostertemplate"}}
 
   <div class="wrapper wrapper-content animated">
-    {{> render component="weeklyShiftRoster" name="weeklyrostertemplate"}}
+    {{> render component="weeklyShiftRoster" type="template"}}
   </div>
 </template>
