--- a/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/view.html
+++ b/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/view.html
@@ -1,39 +1,43 @@
 <template name="shiftBasic">
-  <div class="hidden-success-box">
-    <li class="success-element" data-id="{{state$shift._id}}" data-origin="{{state$thisorigin}}" data-order="{{state$shift.order}}">
-      {{#if canEditRoster}}
+  <li class="success-element">
+    {{#if canEditRoster}}
       <div class="box-wrapper pull-right" style="display: none;">
-        <span class="box-remove glyphicon glyphicon-remove removeRosterBox"></span>
+        <span class="box-remove glyphicon glyphicon-remove remove-shift-button"></span>
       </div>
+    {{/if}}
+
+    <div class="agile-detail">
+      <i class="fa fa-user"></i>
+      {{#if canEditRoster}}
+        <a href="#" class="select-worker" data-pk="{{assignedTo}}"
+           data-value="{{assignedTo}}">{{username assignedTo}}</a>
+      {{else}}
+        {{#if assignedTo}}
+          {{username assignedTo}}
+        {{else}}
+          Open
+        {{/if}}
       {{/if}}
-      <div class="agile-detail">
-        <i class="fa fa-user"></i>
-        {{#if canEditRoster}}
-          <a href="#" class="select-worker" data-pk="{{state$assignedTo}}" data-value="{{state$assignedTo}}">{{username state$assignedTo}}</a>
-        {{else}}
-          {{#if state$assignedTo}}
-            {{username state$assignedTo}}
-          {{else}}
-            Open
-          {{/if}}
-        {{/if}}
-      </div>
-      <div class="agile-detail">
-        <i class="fa fa-clock-o"></i>
-        {{#if canEditRoster}}
-          <a href="#" class="shiftStartTime" data-pk="1">{{timeFormat state$shift.startTime}}</a> - <a href="#" class="shiftEndTime" data-pk="1">{{timeFormat state$shift.endTime}}</a>
-        {{else}}
-          {{timeFormat state$shift.startTime}} - {{timeFormat state$shift.endTime}}
-        {{/if}}
-      </div>
-      <div class="agile-detail">
-        <i class="fa fa-angle-double-right"></i>
-        {{#if canEditRoster}}
-          <a href="#" class="section" data-pk="{{state$section}}" data-value="{{state$section}}">{{sectionById state$section}}</a>
-        {{else}}
-          {{sectionById state$section}}
-        {{/if}}
-      </div>
-    </li>
-  </div>
+    </div>
+
+    <div class="agile-detail">
+      <i class="fa fa-clock-o"></i>
+      {{#if canEditRoster}}
+        <a href="#" class="shiftStartTime" data-pk="1">{{timeFormat startTime}}</a> -
+        <a href="#" class="shiftEndTime" data-pk="1">{{timeFormat endTime}}</a>
+      {{else}}
+        {{timeFormat startTime}} - {{timeFormat endTime}}
+      {{/if}}
+    </div>
+
+    <div class="agile-detail">
+      <i class="fa fa-angle-double-right"></i>
+      {{#if canEditRoster}}
+        <a href="#" class="section" data-pk="{{section}}"
+           data-value="{{section}}">{{sectionById section}}</a>
+      {{else}}
+        {{sectionById section}}
+      {{/if}}
+    </div>
+  </li>
 </template>
