--- a/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/view.html
+++ b/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/view.html
@@ -16,9 +16,9 @@
       </div>
     {{/if}}
 
-    <ul class="sortable-list connectList agile-list">
+    <ul class="sortable-list agile-list">
       {{#each state$shifts}}
-        {{> render component="shiftBasic" shift=this origin=state$origin}}
+        {{> shiftBasic this}}
       {{/each}}
     </ul>
   </div>
