--- a/client/lib/components/navigations/heading/view.html
+++ b/client/lib/components/navigations/heading/view.html
@@ -3,324 +3,13 @@
     {{> render component='breadcrumbs' heading=state$heading id=state$id type=state$type title=state$title}}
 
     <div class="col-sm-7">
-      {{#if state$isMenuList}}
-        <div class="title-action">
-          {{#if isArchive}}
-            {{#linkTo route="menuItemsMaster" category="all" status="all" class="btn btn-info menuItemsRefresh"}}
-              <i class="fa fa-long-arrow-left"></i> Active Items
-            {{/linkTo}}
-          {{else}}
-            <div class="btn-group">
-              <button type="button" class="btn btn-white dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                      aria-expanded="false">
-                <i class="fa fa-cog"></i>
-                Settings
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" style="margin-left: -56px;">
-                {{#if canEditMenu}}
-                  <li>
-                    {{#linkTo route="menuItemsMaster" category="all" status="archived" class="menuItemsRefresh"}}
-                      Archive Items
-                    {{/linkTo}}
-                  </li>
-                  <li>
-                    <a href="/menuItems/submit">Add new menu</a>
-                  </li>
-                {{/if}}
-                {{#if state$isMenuListSubscribed}}
-                  <li><a href="#" class="unSubscribeMenuList"><i class="fa fa-lg fa-rss text-info"></i>
-                    Unsubscribe</a></li>
-                {{else}}
-                  <li><a href="#" class="subscribeMenuList"><i class="fa fa-lg fa-rss text-muted"></i> Subscribe</a>
-                  </li>
-                {{/if}}
-              </ul>
-            </div>
-          {{/if}}
-        </div>
-      {{/if}}
-
-      {{#if state$isMenuDetailed}}
-        <div class="title-action">
-          <div class="btn-group">
-            <button type="button" class="btn btn-white dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-              <i class="fa fa-cog"></i>
-              Settings
-              <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" style="margin-left: -56px;">
-              {{#if state$isMenuSubscribed}}
-                <li class="text-info">
-                  <a href="#" class="hidden-print unSubscribeMenuItemBtn" data-id="{{state$id}}"><i
-                      class="fa fa-lg fa-rss"></i> Unsubscribe</a>
-                </li>
-              {{else}}
-                <li class="text-muted">
-                  <a href="" class="hidden-print subscribeMenuItemBtn" data-id="{{state$id}}"><i
-                      class="fa fa-lg fa-rss"></i> Subscribe</a>
-                </li>
-              {{/if}}
-              {{#if canEditMenu}}
-                <li>
-                  <a href="" class="hidden-print copyMenuItemBtn" data-id="{{state$id}}">
-                    <i class="fa fa-copy" data-id="{{state$id}}"></i>
-                    Copy
-                  </a>
-                </li>
-              {{/if}}
-              <li>
-                <a href="" class="hidden-print printMenuItemBtn" data-id="{{state$id}}">
-                  <i class="fa fa-print"></i>
-                  Print
-                </a>
-              </li>
-              {{#if canEditMenu}}
-                <li role="separator" class="divider"></li>
-                {{#if state$isArchiveMenu}}
-                  <li>
-                    <a href="#" class="hidden-print archiveMenuItemBtn" data-id="{{state$id}}">
-                      <i class="fa fa-dropbox" data-id="{{state$id}}"></i>
-                      Restore
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" class="hidden-print deleteMenuItemBtn" data-id="{{state$id}}">
-                      <i class="fa fa-trash-o" data-id="{{state$id}}"></i>
-                      Delete
-                    </a>
-                  </li>
-                {{else}}
-                  <li>
-                    <a href="#" class="hidden-print archiveMenuItemBtn" data-id="{{state$id}}">
-                      <i class="fa fa-archive" data-id="{{state$id}}"></i>
-                      Archive
-                    </a>
-                  </li>
-                {{/ if}}
-              {{/if}}
-            </ul>
-          </div>
-        </div>
-
-        {{#if canEditMenu}}
-          <!--AREA CHOOSER-->
-          <div class="modal fade" id="areaChooser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            {{> render component = 'areaChooser' onAreaSelected=state$onAreaSelected}}
-          </div>
-          <!--AREA CHOOSER-->
-        {{/if}}
-      {{/if}}
-
-      {{#if state$isJobItemDetailed}}
-        <div class="title-action">
-          <div class="btn-group">
-            <button type="button" class="btn btn-white dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-              <i class="fa fa-cog"></i>
-              Settings
-              <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" style="margin-left: -56px;">
-              <li>
-                {{#if state$isJobItemSubscribed}}
-                  <a href="#" class="hidden-print unSubscribeJobItemBtn" data-id="{{state$id}}"><i
-                      class="fa fa-lg fa-rss text-info" data-id="{{state$id}}"></i> Unsubscribe</a>
-                {{else}}
-                  <a href="" class="hidden-print subscribeJobItemBtn" data-id="{{state$id}}"><i
-                      class="fa fa-lg fa-rss text-muted" data-id="{{state$id}}"></i> Subscribe</a>
-                {{/if}}
-              </li>
-              {{#if canEditJob}}
-                <li>
-                  <a href="" class="hidden-print editJobItemBtn" data-id="{{state$id}}">
-                    <i class="fa fa-edit" data-id="{{state$id}}"></i>Edit
-                  </a>
-                </li>
-                <li>
-                  <a href="" class="hidden-print copyJobItemBtn" data-id="{{state$id}}">
-                    <i class="fa fa-copy" data-id="{{state$id}}"></i> Copy
-                  </a>
-                </li>
-              {{/if}}
-              <li>
-                <a href="" class="hidden-print printJobItemBtn" data-id="{{state$id}}">
-                  <i class="fa fa-print"></i> Print
-                </a>
-              </li>
-              {{#if canEditJob}}
-                <li role="separator" class="divider"></li>
-                {{#if state$isArchiveJob}}
-                  <li>
-                    <a href="#" class="hidden-print archiveJobItem" data-id="{{state$id}}">
-                      <i class="fa fa-dropbox" data-id="{{state$id}}"></i>
-                      Restore
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#" class="hidden-print deleteJobItem" data-id="{{state$id}}">
-                      <i class="fa fa-trash-o" data-id="{{state$id}}"></i>
-                      Delete
-                    </a>
-                  </li>
-                {{else}}
-                  <li>
-                    <a href="#" class="hidden-print archiveJobItem" data-id="{{state$id}}">
-                      <i class="fa fa-archive" data-id="{{state$id}}"></i>
-                      Archive
-                    </a>
-                  </li>
-                {{/ if}}
-              {{/ if}}
-            </ul>
-          </div>
-        </div>
-
-        {{#if canEditJob}}
-          <!--AREA CHOOSER-->
-          <div class="modal fade" id="areaChooser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            {{> render component = 'areaChooser' onAreaSelected=state$onAreaSelected}}
-          </div>
-          <!--AREA CHOOSER-->
-        {{/if}}
-      {{/if}}
-
-      {{#if state$isJobsList}}
-        <div class="title-action">
-          {{#if isArchiveJob}}
-            <a href="" data-action="changeStatusJ" data-link="jobItemsMaster" class="btn btn-info">
-              <i class="fa fa-long-arrow-left"></i> Active Items
-            </a>
-          {{else}}
-            <div class="btn-group">
-              <button type="button" class="btn btn-white dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fa fa-cog"></i>
-                Settings
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" style="margin-left: -56px;">
-                {{#if canEditJob}}
-                  <li>
-                    <a href="#" data-action="changeStatusJ" data-link="jobItemsMasterType" data-type="archive">Archived
-                      Items</a>
-                  </li>
-                  <li>
-                    <a href="/jobItem/submit">Add new job</a>
-                  </li>
-                {{/if}}
-                <li>
-                  {{#if state$isJobListSubscribed}}
-                    <a href="#" class="unSubscribeJobsList"><i class="fa fa-lg fa-rss text-info"></i> Unsubscribe</a>
-                  {{else}}
-                    <a href="#" class="subscribeJobsList"><i class="fa fa-lg fa-rss text-muted"></i> Subscribe</a>
-                  {{/if}}
-                </li>
-              </ul>
-            </div>
-          {{/if}}
-        </div>
-      {{/if}}
-
-      {{#if state$isIngredientsList}}
-        <div class="title-action">
-          {{#if isArchiveJob}}
-            <a href="" data-action="changeStatus" data-link="ingredientsList" class="btn btn-info">
-              <i class="fa fa-long-arrow-left"></i> Active Items
-            </a>
-          {{else}}
-            {{#if canEditStock}}
-              <div class="btn-group">
-                <button type="button" class="btn btn-white dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">
-                  <i class="fa fa-cog"></i>
-                  Settings
-                  <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" style="margin-left: -56px;">
-                  <li>
-                    <a href="#" data-action="changeStatus" data-link="ingredientsListType" data-type="archive">Archived
-                      Items</a>
-                  </li>
-                  <li>
-                    <a href="#addIngredientModal" data-toggle="modal">Add new stock</a>
-                  </li>
-                </ul>
-              </div>
-            {{/if}}
-          {{/if}}
-        </div>
-      {{/if}}
-
-      {{#if state$isActualSales}}
-        <div class="title-action">
-          <a href="" class="btn btn-white previousDay"><i class="fa fa-chevron-left"></i></a>
-          <a href="" class="btn btn-white today">Today</a>
-          <a href="" class="btn btn-white nextDay"><i class="fa fa-chevron-right"></i></a>
-        </div>
-      {{/if}}
-
-      {{#if state$weeklyNavigation}}
-        <div class="title-action" data-type="{{state$type}}">
-          {{#if canEditRoster}}
-            {{#if state$isWeeklyRosterCreated}}
-              <button class="btn btn-link showHideButton" type="button" data-target="#collapse" data-toggle="collapse">
-                {{#if state$collapseIn}}
-                  Hide
-                {{else}}
-                  Show
-                {{/if}}
-                Figures
-              </button>
-              {{#if state$isWeeklyRosterPublished}}
-                <button class="btn btn-primary" disabled="disabled">Published Roster
-                  on {{dayFormat state$publishedOn}}</button>
-              {{else}}
-                <button class="btn btn-primary" id="publishRoster">Publish Roster</button>
-              {{/if}}
-            {{/if}}
-          {{/if}}
-          {{>render component="weekPicker" year=state$getYear week=state$getWeek onDateChanged=state$onDateChanged}}
-        </div>
-      {{/if}}
-
-      {{#if state$isDailyRoster}}
-        {{#if canEditRoster}}
-          <div class="title-action">
-            <a href="#submitShiftModal" class="btn btn-primary" data-toggle="modal">
-              Create new shift
-            </a>
-            <button class="btn btn-white right prevDayRoster"><i class="fa fa-chevron-left"></i></button>
-            <button class="btn btn-white right todayRoster">Today</button>
-            <button class="btn btn-white right nextDayRoster"><i class="fa fa-chevron-right"></i></button>
-          </div>
-        {{/if}}
-      {{/if}}
-
-      {{#if state$isWeeklyTemplate}}
-        {{#if canEditRoster}}
-          <div class="title-action">
-            <a href="#calendarModal" class="btn btn-primary" data-toggle="modal">
-              Copy template shifts to week
-            </a>
-          </div>
-        {{/if}}
-      {{/if}}
-
-      {{#if state$isStockTakeList}}
-        {{#if canEditStock}}
-          <div class="title-action">
-            <a href="" class="btn btn-primary" id="startNewStocktake">
-              Start New Stocktake
-            </a>
-          </div>
-        {{/if}}
-      {{/if}}
-
-      {{#if state$isSalesPrediction}}
-        <div class="title-action prediction-header">
-          {{> render component="salesPredictionHeader"}}
-        </div>
+      {{#if state$headingToLoad}}
+        {{> render
+            component=state$headingToLoad
+            year=state$currentDate.year
+            week=state$currentDate.week
+            onDateChanged=state$onDateChanged
+        }}
       {{/if}}
     </div>
   </div>
