--- a/client/lib/components/sales_prediction/header_controls/view.html
+++ b/client/lib/components/sales_prediction/header_controls/view.html
@@ -1,3 +1,5 @@
 <template name="salesPredictionHeader">
-  {{> render component="weekPicker" year=state$year week=state$week onDateChanged=state$onDateChanged}}
+  <div class="title-action prediction-header">
+    {{> render component="weekPicker" year=state$year week=state$week onDateChanged=state$onDateChanged}}
+  </div>
 </template>
