Select worker is back

--- a/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/worker-editable/worker-editable.html
+++ b/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/worker-editable/worker-editable.html
@@ -1,4 +1,4 @@
 <template name="shiftBasicWorkerEditable">
   <a href="#" class="select-worker" data-pk="{{assignedTo}}"
-     data-value="{{assignedTo}}">{{username assignedTo}}</a>
+     data-value="{{assignedTo}}"></a>
 </template>
