Section dropdown is back

--- a/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/section-editable/section-editable.html
+++ b/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/section-editable/section-editable.html
@@ -1,4 +1,4 @@
 <template name="shiftBasicSectionEditable">
   <a href="#" class="section" data-pk="{{section}}"
-     data-value="{{section}}">{{sectionById section}}</a>
+     data-value="{{section}}"></a>
 </template>
