Applying single responsibility principle for head components

--- a/client/lib/components/navigations/heading/view.html
+++ b/client/lib/components/navigations/heading/view.html
@@ -4,12 +4,7 @@
 
     <div class="col-sm-7">
       {{#if state$headingToLoad}}
-        {{> render
-            component=state$headingToLoad
-            year=state$currentDate.year
-            week=state$currentDate.week
-            onDateChanged=state$onDateChanged
-        }}
+        {{> render component=state$headingToLoad}}
       {{/if}}
     </div>
   </div>
