--- a/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/time-editable/time-editable.html
+++ b/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/time-editable/time-editable.html
@@ -1,3 +1,3 @@
 <template name="shiftBasicTimeEditable">
-  <a href="#" class="time" data-pk="1"></a>
+  <a href="#" class="time" data-pk="1">{{timeFormat currentTime}}</a>
 </template>
