--- a/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/shift-basic.html
+++ b/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/shift-basic.html
@@ -1,5 +1,5 @@
 <template name="shiftBasic">
-  <li class="success-element shift-basic-component">
+  <li class="success-element shift-basic-component {{#if canEditRoster}}can-edit{{/if}}">
     {{#if canEditRoster}}
       <div class="box-wrapper pull-right shift-remove-wrapper">
         <span class="box-remove glyphicon glyphicon-remove remove-shift-button"></span>
